# reduce_fraction

./: CMakeLists.txt  main.c  readme.md
